--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                         <div class="content-container">
 
-                            <img src="/images/image-qr-code.png" alt="QR-Code-pic">
+                            <img src="images/image-qr-code.png" alt="QR-Code-pic">
 
                             <div class="content">
                             <h1> Improve your front-end skills by building projects</h1>
